--- a/nmct.ba.cashlessproject.model/nmct.ba.cashlessproject.model.csproj
+++ b/nmct.ba.cashlessproject.model/nmct.ba.cashlessproject.model.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="Organisation.cs" />
-    <Compile Include="product.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
     <Compile Include="Sales.cs" />
