--- a/nmct.ba.cashlessproject.ui.customers/App.config
+++ b/nmct.ba.cashlessproject.ui.customers/App.config
@@ -1,19 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <!--<connectionStrings>
-        <add name="nmct.ba.cashlessproject.ui.customers.Properties.Settings.ConnectionString"
-            connectionString="Data Source=JONA\DATAMANAGEMENT;Initial Catalog=klant;User ID=sa;Password=admin123;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>-->
-
-  <ConnectionSettings>
-    <dbname>klant</dbname>
-    <username>sa</username>
-    <pass>admin123</pass>
-  </ConnectionSettings>
+  <configSections>
+  </configSections>
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+  <appSettings>
+    <add key="DbName" value="Klant"/>
+    <add key="Login" value="admin"/>
+    <add key="Password" value="123"/>
+  </appSettings>
 </configuration>
