starten met medewerkers app

--- a/nmct.ba.cashlessproject.ui.customers/App.config
+++ b/nmct.ba.cashlessproject.ui.customers/App.config
@@ -7,8 +7,8 @@
     </startup>
 
   <appSettings>
-    <add key="DbName" value="Klant"/>
-    <add key="Login" value="admin"/>
-    <add key="Password" value="123"/>
+    <add key="DbName" value="KvKortrijk"/>
+    <add key="Login" value="user"/>
+    <add key="Password" value="user"/>
   </appSettings>
 </configuration>
