--- a/nmct.ba.cashlessproject.ui.customers/nmct.ba.cashlessproject.ui.customers.csproj
+++ b/nmct.ba.cashlessproject.ui.customers/nmct.ba.cashlessproject.ui.customers.csproj
@@ -101,8 +101,8 @@
     <Compile Include="ViewModel\ChargingVM.cs" />
     <Compile Include="ViewModel\RegisterVM.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
-    <Compile Include="View\signIn.xaml.cs">
-      <DependentUpon>signIn.xaml</DependentUpon>
+    <Compile Include="View\SignIn.xaml.cs">
+      <DependentUpon>SignIn.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -153,7 +153,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="View\signIn.xaml">
+    <Page Include="View\SignIn.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
