--- a/nmct.ba.cashlessproject.ui.employees/App.config
+++ b/nmct.ba.cashlessproject.ui.employees/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+  <appSettings>
+    <add key="DbName" value="KvKortrijk"/>
+    <add key="Login" value="user"/>
+    <add key="Password" value="user"/>
+  </appSettings>
 </configuration>
