--- a/nmct.ba.cashlessproject.api/nmct.ba.cashlessproject.api.csproj
+++ b/nmct.ba.cashlessproject.api/nmct.ba.cashlessproject.api.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Controllers\RegisterEmployeeController.cs" />
+    <Compile Include="Controllers\SaleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -191,6 +192,7 @@
     <Compile Include="Models\ProductDA.cs" />
     <Compile Include="Models\RegisterDA.cs" />
     <Compile Include="Models\RegisterEmployeeDA.cs" />
+    <Compile Include="Models\SaleDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
