--- a/nmct.ba.cashlessproject.helper/nmct.ba.cashlessproject.helper.csproj
+++ b/nmct.ba.cashlessproject.helper/nmct.ba.cashlessproject.helper.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="beid35libCS">
+      <HintPath>..\..\..\..\Belgium Identity Card SDK\beidlib\dotNet\bin\beid35libCS.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ByteToImageConverters.cs" />
     <Compile Include="Cryptography.cs" />
+    <Compile Include="IDReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timestamp.cs" />
   </ItemGroup>
