medewerkersapp bijna af

--- a/nmct.ba.cashlessproject.ui.employees/App.config
+++ b/nmct.ba.cashlessproject.ui.employees/App.config
@@ -8,5 +8,6 @@
     <add key="DbName" value="KvKortrijk"/>
     <add key="Login" value="user"/>
     <add key="Password" value="user"/>
+    <add key="RegisterID" value="1"/>
   </appSettings>
 </configuration>
