--- a/nmct.ba.cashlessproject.ui.management/nmct.ba.cashlessproject.ui.management.csproj
+++ b/nmct.ba.cashlessproject.ui.management/nmct.ba.cashlessproject.ui.management.csproj
@@ -190,6 +190,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\nmct.ba.cashlessproject.helper\nmct.ba.cashlessproject.helper.csproj">
+      <Project>{54832c72-26c4-4b8f-918e-430b9e153e3d}</Project>
+      <Name>nmct.ba.cashlessproject.helper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\nmct.ba.cashlessproject.model\nmct.ba.cashlessproject.model.csproj">
       <Project>{fe043724-9ef5-497d-8df3-2f4a70437b00}</Project>
       <Name>nmct.ba.cashlessproject.model</Name>
