it company logs weergeven

--- a/nmct.ba.cashlessproject.ui.employees/App.config
+++ b/nmct.ba.cashlessproject.ui.employees/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="DbName" value="KvKortrijk" />
     <add key="Login" value="user" />
-    <add key="Password" value="user" />
+    <add key="Password" value="123" />
     <add key="RegisterID" value="1" />
   </appSettings>
   <system.web>
