--- a/nmct.ssa.cashlessproject.itcompany/Web.config
+++ b/nmct.ssa.cashlessproject.itcompany/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-nmct.ssa.cashlessproject.itcompany-20141217014626.mdf;Initial Catalog=aspnet-nmct.ssa.cashlessproject.itcompany-20141217014626;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-nmct.ssa.cashlessproject.itcompany-20141217014626.mdf;Initial Catalog=aspnet-nmct.ssa.cashlessproject.itcompany-20141217014626;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=JONA\DATAMANAGEMENT;Initial Catalog=AdminITCompany;Integrated Security=True"
+  providerName="System.Data.SqlClient" />
     <add name="ConnectionString"
       connectionString="Data Source=JONA\DATAMANAGEMENT;Initial Catalog=AdminDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
