--- a/nmct.ba.cashlessproject.ui.customers/App.config
+++ b/nmct.ba.cashlessproject.ui.customers/App.config
@@ -9,6 +9,6 @@
   <appSettings>
     <add key="DbName" value="KvKortrijk"/>
     <add key="Login" value="user"/>
-    <add key="Password" value="user"/>
+    <add key="Password" value="123"/>
   </appSettings>
 </configuration>
