--- a/nmct.ba.cashlessproject.ui.management/nmct.ba.cashlessproject.ui.management.csproj
+++ b/nmct.ba.cashlessproject.ui.management/nmct.ba.cashlessproject.ui.management.csproj
@@ -51,6 +51,7 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
