--- a/nmct.ba.cashlessproject.ui.employees/nmct.ba.cashlessproject.ui.employees.csproj
+++ b/nmct.ba.cashlessproject.ui.employees/nmct.ba.cashlessproject.ui.employees.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\IDReader.cs" />
     <Compile Include="ViewModel\SignInVM.cs" />
     <Compile Include="ViewModel\ApplicationVM.cs" />
     <Compile Include="ViewModel\OrderVM.cs" />
