--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,6 +7,7 @@
   <repository path="..\nmct.ba.cashlessproject.ui.employees\packages.config" />
   <repository path="..\nmct.ba.cashlessproject.ui.management\packages.config" />
   <repository path="..\nmct.ba.cashlessproject.ui\packages.config" />
+  <repository path="..\nmct.ba.cashlessproject.windowsService\packages.config" />
   <repository path="..\nmct.be.cashlessproject.ui\packages.config" />
   <repository path="..\nmct.ssa.cashlessproject.itcompany\packages.config" />
   <repository path="..\testje\packages.config" />
